# soundbox-ii

./: .envrc  .gitignore  COPYING  Cargo.toml  README.md  bacon.toml  core.nix  crate.nix  deny.toml  dev_server.sh  env.bat  flake.nix  launch_vlc.bat  launch_vlc.sh  module.nix  pre-commit.sh  todo-hunter.sh  vlc.nix  watch.bat  watch.sh
beet-pusher/: .gitignore  Cargo.toml
beet-pusher/example-scripts/: README.md  beet  get_current_id.sh  grouping.sh  info.sh  lyrics.sh  run_beet_cmd.sh
beet-pusher/src/: main.rs
bucket-spigot/: Cargo.toml
bucket-spigot/examples/simple-html/: main.rs  style-svg.css  style.css
bucket-spigot/src/: child_vec.rs  clap.rs  lib.rs  order.rs  path.rs  ser.rs  traversal.rs  view.rs
bucket-spigot/src/order/: counts_remaining.rs  node.rs  peek.rs  source.rs  tests.rs  weights.rs
bucket-spigot/src/order/tests/: random_seeded.rs
bucket-spigot/src/order/tests/snapshots/: bucket_spigot__order__tests__random_seeded__shuffle_for_300_items.snap  bucket_spigot__order__tests__random_seeded__shuffle_for_500_items.snap  bucket_spigot__order__tests__random_seeded__shuffle_looks_decent-4.snap
bucket-spigot/src/tests/: arb_network.rs  arb_rng.rs  clap.rs  modify_network.rs  path.rs  peek_effort.rs  peek_pop_network.rs  script.rs  ser.rs  sync.rs  view_table.rs
bucket-spigot/src/tests/snapshots/: bucket_spigot__tests__view_table__limit_width_child.snap  bucket_spigot__tests__view_table__limit_width_root.snap
bucket-spigot/src/view/: error.rs  table.rs  table_model.rs
bucket-spigot/src/view/table/: experiment_non_recursive.rs
frontend/: Cargo.toml  Trunk.toml  bacon.toml  index.html  index.sass  index.scss  watch.bat  watch.sh
frontend/src/: controls.rs  fmt.rs  log.rs  macros.rs  main.rs  model.rs  old_main.rs  playback.rs  reconnect.rs  router.rs  svg.rs  view.rs  websocket.rs
frontend/src/old_main/: controls.rs  fmt.rs  playback.rs
frontend/src/view/: disconnected.rs  playback.rs
frontend/src/view/playback/: controls.rs  timing.rs
q-filter-tree/: Cargo.toml
q-filter-tree/src/: error.rs  id.rs  iter.rs  iter_mut.rs  lib.rs  node.rs  order.rs  refs.rs  tree_serde.rs  weight_vec.rs
q-filter-tree/src/iter/: mod.rs  tests.rs  tests_mut.rs
q-filter-tree/src/iter/mut_ref/: breadcrumb.rs  wrapper.rs
q-filter-tree/src/order/: in_order.rs  random.rs  round_robin.rs  shuffle.rs  weight_vec.rs
q-filter-tree/src/serde/: mod.rs  node_descriptor.rs  node_id.rs  node_path.rs  tree.rs
q-filter-tree/tests/: prefill.rs  tree_basic.rs  tree_serde_json.rs
sequencer/: Cargo.toml  bacon.toml
sequencer/src/: cli.rs  command.rs  iter.rs  lib.rs  macros.rs  main.rs  persistence.rs  sources.rs  test_script.txt  test_script_move.txt  test_script_persist.txt  tests.rs
sequencer/src/persistence/: annotate.rs  io.rs  kdl_serde_impl.rs  parse.rs  update.rs
sequencer/src/persistence/kdl_serde_impl/: de.rs  never.rs  ser.rs
sequencer/src/persistence/tests/: decode.rs  encode.rs  round_trip.rs  source_mutli_select.rs
sequencer/src/sources/: beet.rs  file.rs  multi_select.rs
sequencer/src/tests/: fail.rs
sequencer/tests/: test_cli.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/license/: COPYING.WELCOME  mod.rs
vlc-http/: Cargo.toml
vlc-http/examples/cli/: README.md  main.rs  script_example.txt
vlc-http/src/: action.rs  auth.rs  clap.rs  client_state.rs  cmd_playlist_items.rs  command.rs  controller.rs  fmt.rs  goal.rs  http_client.rs  lib.rs  request.rs  response.rs  rules.rs  sync.rs  vlc_responses.rs
vlc-http/src/action/: playback_mode.rs  playlist_items.rs  query_playback.rs  query_playlist.rs
vlc-http/src/action/playlist_items/: insert_match.rs  next_command.rs
vlc-http/src/client_state/: sequenced.rs
vlc-http/src/controller/: high_converter.rs  rate.rs  ret.rs  rules.rs  tests.rs
vlc-http/src/controller/high_converter/: playback_mode.rs  playlist_set.rs
vlc-http/src/controller/high_converter/playlist_set/: current.rs  enqueue.rs  index_item.rs  next.rs  previous.rs  (+2 more)
vlc-http/src/goal/: playback_mode.rs  playlist_items.rs  query_playback.rs  query_playlist.rs
vlc-http/src/goal/playlist_items/: insert_match.rs  next_command.rs
vlc-http/src/http_runner/: ureq.rs
vlc-http/src/request/: endpoint.rs
vlc-http/src/request/endpoint/: tests.rs
vlc-http/src/response/: playback.rs  playlist.rs
vlc-http/src/response/tests/: mod.rs
vlc-http/src/rules/: fetch_after.rs  fetch_after_seek.rs  fetch_after_track_end.rs  fetch_after_volume.rs  fill.rs  need.rs
vlc-http/tests/: test_cases.rs
vlc-http/tests/common/: harness.rs  mod.rs  model.rs
vlc-http/tests/inputs/: action-playback-mode-repeat-all-random.txt  action-playback-mode-repeat-all.txt  action-playback-mode-repeat-one-random.txt  action-playback-mode-repeat-one.txt  action-playlist-set-cached01.txt  action-playlist-set-empty.txt  action-playlist-set-mid01.txt  action-playlist-set-new01-mode.txt  action-playlist-set-new01.txt  action-playlist-set-new05-hist.txt  action-playlist-set-stress01.txt  command-playlist-add-01.txt  command-playlist-delete-01.txt  command-playlist-play-01.txt  query-art-01.txt  query-playlist-set-query-matched-01.txt
vlc-http/tests/snapshots/: test_cases__case@action-playback-mode-repeat-all-random.txt.snap  test_cases__case@action-playback-mode-repeat-all.txt.snap  test_cases__case@action-playback-mode-repeat-one-random.txt.snap  test_cases__case@action-playback-mode-repeat-one.txt.snap  test_cases__case@action-playlist-set-cached01.txt.snap  test_cases__case@action-playlist-set-empty.txt.snap  test_cases__case@action-playlist-set-mid01.txt.snap  test_cases__case@action-playlist-set-new01-mode.txt.snap  test_cases__case@action-playlist-set-new01.txt.snap  test_cases__case@action-playlist-set-new05-hist.txt.snap  test_cases__case@action-playlist-set-stress01.txt.snap  test_cases__case@command-playlist-add-01.txt.snap  test_cases__case@command-playlist-delete-01.txt.snap  test_cases__case@command-playlist-play-01.txt.snap  test_cases__case@query-art-01.txt.snap  test_cases__case@query-playlist-set-query-matched-01.txt.snap
(+52 files in other folders)
