[package]
name = "soundbox-ii"
version = "0.1.0"
edition = "2018"
description = "Interactive graph-based sequencer for beets songs playing on a VLC backend."

[workspace]
members = ["q-filter-tree", "vlc-http", "frontend", "shared"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
q-filter-tree = { path = "./q-filter-tree" }
vlc-http = { path = "./vlc-http" }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync", "macros"] }
warp = "0.3.2"
http = "0.2.4"
clap = { version = "3.1.6", features = ["cargo", "derive"] }
shared = { path = "./shared", features = ["server", "time_now"] }
serde_json = "1.0.64"
futures = "^0.3"
hotwatch = "0.4.5"
hyper = "0.14.18"
