[package]
name = "soundbox-ii"
version = "0.1.0"
edition = "2021"
description = "Interactive graph-based sequencer for beets songs playing on a VLC backend."
license = "GPL-3.0-or-later"

[workspace]
members = ["q-filter-tree", "vlc-http", "frontend", "sequencer", "shared", "arg_split"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
q-filter-tree = { path = "./q-filter-tree" }
vlc-http = { path = "./vlc-http" }
sequencer = { path = "./sequencer" }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "sync", "macros"] }
warp = "0.3.3"
http = "0.2.8"
clap = { version = "3.2.18", features = ["cargo", "derive"] }
shared = { path = "./shared", features = ["server", "time_now"] }
arg_split = { path = "./arg_split" }
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"
futures = "^0.3"
hotwatch = "0.4.6"
hyper = "0.14.23"
url = "2.3.1"
