[package]
name = "bucket-spigot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
arbitrary = "1.3.2"

[dev-dependencies]
arbtest = "0.3.1"
insta = { version = "1.39.0", features = ["ron"] }
serde_json = "1.0.116"
serde_with = { version = "3.9.0", default-features = false, features = ["std", "alloc"] }

[lints]
workspace = true
