[package]
name = "frontend"
version = "0.1.0"
authors = ["Daniel Lambert <danjl1100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
anyhow = "^1"
shared = { path = "../shared", features = ["client"] }
serde = { version = "1.0.126" }
serde_json = "1.0.64"
gloo-timers = "0.2.1"
chrono = { version = "0.4.19", features = ["wasmbind"] }
backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.53", features = ["Location", "Window"] }
twox-hash = "1.6.1"
