[package]
name = "frontend"
version = "0.1.0"
authors = ["Daniel Lambert <danjl1100@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
anyhow = "^1"
shared = { path = "../shared", features = ["client", "time_now", "wasm"] }
serde = { version = "^1.0" }
serde_json = "1.0.64"
futures = "^0.3.21"
gloo-timers = "0.2.1"
gloo-net = { version = "^0.2.3", features = [ "websocket" ]}
backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.53", features = ["Location", "Window"] }
wasm-bindgen = "=0.2.81" #strict equality, to keep in sync with Trunk build pipeline in `flake.nix`
wasm-bindgen-futures = "^0.4.31"
gloo = { version = "0.4" }
twox-hash = "1.6.1"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
