[package]
name = "q-filter-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
rand = "0.8.4"
rand_chacha = "0.3.1"

[dev-dependencies]
serde_json = "1.0.64"
