[package]
name = "q-filter-tree"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clap = ["dep:clap"]

[dependencies]
clap = { version = "3.2.18", features = ["derive"], optional = true }
shared = { path = "../shared" }
serde = { version = "^1.0", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
serde_json = "1.0.91"
