[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["cargo", "derive"] }
q-filter-tree = { path = "../q-filter-tree", features = ["clap"] }
arg_util = { path = "../arg_util" }
serde_json = "1.0.91"
serde = "^1.0"
shared = { path = "../shared" }
walkdir = "2"
