[package]
name = "shared"
version = "0.1.0"
authors = ["Daniel Lambert <danjl1100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = []
server = []
time_now = []
wasm = ['chrono/wasmbind']

[dependencies]
serde = { version = "^1.0", features = [ "derive" ] }
chrono = "0.4.19"
