[package]
name = "vlc-http"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
http = "1.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
insta = { version = "1.38.0", features = ["ron"] }

[features]
clap = ["dep:clap"]
