[package]
name = "vlc-http"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
http = "1.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
ureq = { version = "2.9.7", features = ["http-crate"], default-features = false, optional = true }
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
insta = { version = "1.38.0", features = ["ron", "glob"] }
test-log = { version = "0.2.16", default-features = false, features = ["color", "trace"] }
ureq = { version = "2.9.7", features = ["http-crate"], default-features = false }

[features]
default = ["clap", "ureq"]
clap = ["dep:clap"]
ureq = ["dep:ureq"]

[lints]
workspace = true
